# Procon

./: .gitignore  README.md  intersect.cpp  log.txt  maze_solve.cpp  slide.cpp  slidepuzzle_solver.cpp  solver.cpp  solver_m.cpp  takamatsu.json
editor/: CMakeLists.txt  build.bat  memo.txt  run.bat  ui.bat
editor/form/: resource.qrc
editor/forms/: resource.qrc  window_layout.ui
editor/src/command/: add_vertex_command.cpp  command.cpp  create_polygon_command.cpp  select_vertex_command.cpp
editor/src/commands/: add_vertex.cpp  add_vertex.h  command_manager.cpp  command_manager.h  create_polygon.cpp  create_polygon.h  remove_object.cpp  remove_object.h
editor/src/common/: command_manager.cpp  data_container.cpp  document_object.cpp  editor.cpp  editor_manager.cpp  link_node.cpp  linked_node.cpp  main.cpp  mainwindow.cpp  mainwindow.h  polygon_drawing.cpp  scene.cpp  scene.h  scene_view.cpp  scene_view.h  vertex_object.cpp
editor/src/editors/: editor.cpp  editor.h  editor_manager.cpp  editor_manager.h  object_selector.cpp  object_selector.h  polygon_creator.cpp  polygon_creator.h  vertex_plotter.cpp  vertex_plotter.h
editor/src/include/command/: add_vertex_command.h  command.h  create_polygon_command.h  select_vertex_command.h
editor/src/include/common/: data_container.h  document.h  document_object.h  editor_manager.h  link_node.h  linked_node.h  mainwindow.h  parameter.h  polygon_drawing.h  scene.h  scene_view.h  vertex_object.h
editor/src/include/mode/: plotting_mode.h  select_mode.h
editor/src/include/objects/: polygon_object.h  vertex_object.h
editor/src/include/operator/: plotting.h
editor/src/mode/: plotting_mode.cpp  select_mode.cpp
editor/src/models/: document.cpp  document.h  object_model.cpp  object_model.h  polygon_object.cpp  polygon_object.h  vertex_object.cpp  vertex_object.h
editor/src/objects/: polygon_object.cpp  vertex_object.cpp
editor/src/puzzle/: field.cpp  operator.cpp
editor/src/util/: convex_hull.cpp  convex_hull.h  convex_hull_of_graph.cpp  convex_hull_of_graph.h  geometry.h  serialize.cpp  serialize.h
editor/ui/: resource.qrc  window_layout.ui
editor/win/: run.bat  ui.bat
editor/win_batch/: build.bat  run.bat  ui.bat
solver/: CMakeLists.txt  build.bat
solver/Mackyson/: CMakeLists.txt  test.sh
solver/Mackyson/src/: colisionCheck.h  data.h  decoder.h  picojson.h  solver.cpp
solver/namachan/: .gitignore  README.md  dub.json  test.sh
solver/namachan/lib/: data.d  decoder.d  encoder.d  geometry.d
solver/namachan/mergetool/: .gitignore  dub.json  mergetool
solver/namachan/solver/: dub.json
solver/namachan/src/: accumurator.d  app.d  basic_data.d  cmdopt.d  data.d  decoder.d  encoder.d  eval.d  geometry.d  search.d  trigger.d  util.d  visualize.d
solver/rucm/: build.bat
solver/rucm/src/: CMakeLists.txt
solver/rucm/test/: geometry_test.cpp
solver/src/: CMakeLists.txt
solver/src/common/: data_model.h  evaluator.h  loader.h  node_checker.h  node_container.h  searcher.h  solver.cpp  solver.h
solver/src/components/: data_store.h  datastore.h  evaluator.h  loader.h  operator.h  searcher.h  verifier.h
solver/src/core/: CMakeLists.txt  component.cpp  component.h  datastore.cpp  datastore.h  entity.h  evaluator.h  loader.cpp  loader.h  operator.cpp  operator.h  searcher.cpp  searcher.h  solver.cpp  solver.h  verifier.h
solver/src/greedy/: greedy_searcher.cpp  greedy_searcher.h
solver/src/lib/: geometry.h
solver/test/: CMakeLists.txt  loader_test.cpp  polygon_test.cpp  sample.txt
solver/win/: build.bat  run.bat
src/: data.h  (+2 more)
(+173 files in other folders)
